# mmts

./: .gitignore  README.md  pyproject.toml
configs/: defaults.yaml
scripts/: eval.sh  imgify.sh  manage_experiments.sh  run_all.sh  train.sh
src/mmts/: __init__.py
src/mmts/cli/: eval.py  imgify.py  preprocess.py  train.py
src/mmts/configs/: loader.py
src/mmts/core/: lora.py
src/mmts/data/: builders.py  collators.py  datasets.py
src/mmts/evaluation/: generate.py  metrics.py  plotting.py
src/mmts/imaging/: __init__.py  base.py
src/mmts/imaging/renderers/: gasf.py  grayscale.py
src/mmts/models/: loader.py  lora.py
src/mmts/prompts/: base_rules.txt  templates.py
src/mmts/training/: arguments.py  trainer.py
src/mmts/utils/: __init__.py  experiment.py  io.py  json_parse.py  prompts.py  seed.py
tests/: peek_samples.py
