[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mmts"
version = "0.1.0"
description = "MMTS — 多模态时序/数值 JSON 微调最小框架（VL + LoRA + JSON 输出）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"
authors = [{ name = "天月 星辰", email = "a36624705@gmail.com" }]
keywords = ["multimodal", "vision-language", "lora", "fine-tuning", "regression", "time-series", "qwen"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]


dependencies = [
  "torch==2.5.1",
  "transformers==4.57.0",
  "datasets==2.21.0",
  "peft==0.11.1",
  "pillow==10.4.0",
  "matplotlib==3.9.3",
  "numpy==1.26.4",
  "tqdm==4.67.1",
  "hydra-core==1.3.2",
  "omegaconf==2.3.0",
  "accelerate==1.10.1",
  "huggingface-hub==0.34.6",
  "safetensors==0.4.5",
  "tokenizers==0.22.1"
]

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "ruff==0.5.0",
  "isort==5.13.2",
  "pytest==8.1.0"
]

[project.scripts]
mmts-train = "mmts.cli.train:main"
mmts-eval  = "mmts.cli.eval:main"
mmts-imgify = "mmts.cli.imgify:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
